--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.7.2",
     "react": "^16.9.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "react-inlinesvg": "^1.1.6",
     "style-loader": "^1.0.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.40.2",
