--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
     "react-inlinesvg": "^1.1.6",
     "style-loader": "^1.0.0",
     "svg-inline-loader": "^0.8.0",
